# Lima-camera-pilatus

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: PilatusCamera.h  PilatusInterface.h  PilatusSaving.h
python/: __init__.py
sip/: PilatusCamera.sip  PilatusInterface.sip
src/: PilatusCamera.cpp  PilatusInterface.cpp  PilatusSaving.cpp
tango/: CMakeLists.txt  Pilatus.py
